assets/css/variables.css
@layer base {
  :root {
    --app-background-color: theme('colors.green');
    --app-background-speed: theme('transitionDuration.1000');
    --app-background-ease: theme('transitionTimingFunction.out');
    --app-inner-gutter: theme('spacing.20');
    --app-outer-gutter: theme('spacing.20');
    --app-header-height: 87px;
    --app-layer-deep: -1;
    --app-layer-deeper: -2;

    @screen md {
      --app-outer-gutter: theme('spacing.40');
      --app-header-height: 174px;
    }

    @screen 2xl {
      --app-outer-gutter: theme('spacing.60');
    }
  }
}

